test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-transform
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hello-transform
  template:
    metadata:
      labels:
        app: hello-transform
        lb: hello-transform
    spec:
      containers:
#        - image: 'telemachusluu/nginx:${parameters["tag"]}'
        - image: 'telemachusluu/nginx:tuesday'
          name: primary
          ports:
            - containerPort: 80
