test_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-telemachus
  namespace: test2
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    lb: hello-telemachus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: hello-telemachus
  name: hello-telemachus
  namespace: test2
spec:
  rules:
    - http:
        paths:
        - path: /test2/hello-telemachus
          pathType: Prefix
          backend:
            service:
              name: hello-telemachus
              port:
                number: 80
