testt1_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-transform
  namespace: testt1
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    lb: hello-transform
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: hello-transform
  name: hello-transform
  namespace: testt1
spec:
  rules:
    - http:
        paths:
        - path: /testt1/hello-transform
          pathType: Prefix
          backend:
            service:
              name: hello-transform
              port:
                number: 80
